--- a/style.css
+++ b/style.css
@@ -1,5 +1,148 @@
-div {
-    background-color: chocolate;
-    margin-bottom: 10px;
-    padding: 15px;
+
+.open-sans-normal {
+  font-family: "Open Sans", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "width" 100;
+}
+/* share style */
+.text-primary{
+    color:#FD6E0A;
+}
+
+.dark-2 {
+
+    color:#474747;
+}
+
+nav ul {
+    display: flex;
+    align-items: center;
+}
+/* nave styles */
+
+nav {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin: 0px 200px;
+}
+
+.btn-primary{
+    background-color:#FD6E0A ;
+    font-size: 20px;
+    font-weight: bold;
+    border: none;
+    color: white;
+    padding: 18px 35px;
+    border border-radius: 5px;
+    
+}
+
+
+.nav-title{
+    font-weight: 800;
+    font-size:45px;
+}
+
+
+nav ul li {
+    list-style: none;
+    margin-right: 50px;
+    
+}
+ nav ul li a {
+    text-decoration: none;
+    font-size: 20 px;
+ }
+ /* banner styles */
+ .secondary-bg{
+  background-color: #FFF8F3;
+ }
+
+ .banner-greetings{
+    font-size: 45px;
+    font-weight: 600;
+ }
+ .banner-title{
+    font-size: 85px;
+    font-weight: bold;
+ }
+  .banner-profile picture{
+    width: 584;
+  }
+ 
+  .banner{
+    display: flex;
+    justify-content: space-between;
+    margin: 0 35px 0 180px;
+  }
+  .banner-content{
+    max-width:580px;
+  }
+
+  .header{
+    background-image: url(/portfolio-resources/images/developer.png), url(/portfolio-resources/images/header_bg.png); 
+    background-repeat: no-repeat ;
+    background-position: top left, bottom right;
+  }
+
+  .section-title{
+    font-size: 35px;
+    font-weight: bold;
+    color: #181818;
+  }
+  .text-center{
+    text-align: center;
+  }
+
+  .section-description{
+    font-size: 18px;
+    color: #757575;
+  }
+  /* ABOUT STYLE */
+  .about{
+    border-radius: 10px;
+    padding: 130px 150px;
+    text-align: center;
+    
+}
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+  
+}
+
+resume-container{
+  display: flex;
+}
+  
+
+/* Main style */
+main{
+  max-width: 1140px;
+  margin: 0 auto;
+}
+
+.item-description{
+  font-weight: 600;
+}
+  
+
+.about-items{
+  display: flex;
+  justify-content: space-around;
+}
+
+
+.skills-container{
+  display: flex;
+  gap: 24px;
+}
+.skill{
+  padding: 30px;
+  border radius:5px
+  box-shadow: 0px 6px 50px 0px  rgba(0, 0, 0, 0);
 }
